static/css/style.css
body {
	background: #F7F7F7;
}

ol, ul {
	list-style-position: outside;
	margin-left: 2rem;
}

h6 {
	text-transform: uppercase;
	letter-spacing: 1px;
}

blockquote {
	margin-left: 1rem;
	padding-left: 1rem;
	border-left: 3px solid #EEE;
}

figure {
	position: relative;
}

figure > figcaption {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	padding: 1rem;
    box-sizing: border-box;
    background: rgba(0,0,0,0.5);
	color: white;
}

figcaption h4,
figcaption p {
	margin: 0;
}

.uppercase {
	text-transform: uppercase;
}

.center {
	text-align: center;
}

.container {
	max-width: 80rem;
}

.page-section {
	margin: 3rem 0;
}

.page-section.thin {
	margin: 3rem auto;
	max-width: 65rem;
}

.card {
	background-color: #FFF;
	padding: 2rem;
	box-shadow: 0 1px 5px rgba(0,0,0,.1);
	border: 1px solid #DDD;
	border-radius: 3px;
}

#logo {
	display: inline-block;
	width: 10rem;
	height: 10rem;
	border-radius: 50%;
	margin-bottom: 2rem;
}

#page-title {
	font-family: Georgia, Times, Times New Roman, serif;
	font-style: italic;
    font-weight: bolder;
    font-size: 6rem;
    margin: 0;
}

#page-subtitle {
	color: #999;
}

/* .summary-list and .summary styling */
.summary {
	margin: 1rem;
	padding: 0;
	color: #333;
}

.summary .summary-wrapper {
	padding: 0 1rem 1rem 1rem;
}

.summary .permalink {
	color: inherit;
	text-decoration: none;
}

.summary .image {
	display: block;
	width: 100%;
	height: 20rem;
	object-fit: cover;
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
}

.summary .header {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-between;
	align-items: center;
}

.summary .title,
.summary .description {
	margin: 0;
}

.summary .permalink:hover .title {
	color: #5694f1;
}

.summary .date,
.summary .description {
	color: #999;
}

.read-more {
	display: flex;
}

.read-more .image {
	height: 10rem;
}

/* .post styling */
.post header {
	margin-bottom: 2rem;
}

.post .subtitle {
	margin: 0;
}

.post table {
	width: 100%;
}

.post img {
	max-width: 100%;
	margin: 0 auto;
	display: block;
	border-radius: 3px;
}

.post-nav {
	display: flex;
	justify-content: space-between;
}

.copyright {
	color: #999;
	font-size: 14px;
	text-align: center;
}

